--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@clerk/nextjs": "^6.9.11",
     "@google/generative-ai": "^0.21.0",
     "@hookform/resolvers": "^3.10.0",
+    "@langchain/community": "^0.3.28",
+    "@langchain/core": "^0.3.37",
     "@prisma/client": "^5.14.0",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-alert-dialog": "^1.1.4",
@@ -59,9 +61,12 @@
     "@trpc/client": "^11.0.0-rc.446",
     "@trpc/react-query": "^11.0.0-rc.446",
     "@trpc/server": "^11.0.0-rc.446",
+    "@types/react-syntax-highlighter": "^15.5.13",
+    "@uiw/react-md-editor": "^4.0.5",
     "ai": "^4.1.16",
     "assemblyai": "^4.9.0",
     "axios": "^1.7.9",
+    "bottleneck": "^2.19.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
@@ -69,23 +74,29 @@
     "embla-carousel-react": "^8.5.2",
     "firebase": "^11.2.0",
     "geist": "^1.3.0",
+    "ignore": "^7.0.3",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.471.1",
     "next": "^15.0.1",
     "next-themes": "^0.4.4",
+    "octokit": "^4.1.0",
     "react": "^18.3.1",
+    "react-circular-progressbar": "^2.1.0",
     "react-day-picker": "8.10.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.5",
     "react-hook-form": "^7.54.2",
     "react-resizable-panels": "^2.1.7",
+    "react-syntax-highlighter": "^15.6.1",
     "recharts": "^2.15.0",
     "refractor": "^4.8.1",
     "server-only": "^0.0.1",
     "sonner": "^1.7.2",
+    "stripe": "^17.6.0",
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "usehooks-ts": "^3.1.0",
     "vaul": "^1.1.2",
     "zod": "^3.24.1"
   },
