--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "date-fns": "3.6.0",
     "embla-carousel-react": "^8.5.2",
     "firebase": "^11.2.0",
+    "framer-motion": "^12.4.1",
     "geist": "^1.3.0",
     "ignore": "^5.2.0",
     "input-otp": "^1.4.2",
